--- a/versao4 - final/index.html
+++ b/versao4 - final/index.html
@@ -201,8 +201,8 @@
 				 						<a href="#">	<p>1234567890</p> </a>
 				 						<img src="img/instagram.png" alt="instagram">
 				 						<a href="https://www.instagram.com/sofis_aqquino/" target="_blank"><p>sofis_aqquino</p></a>	
-				 						<A href="https://github.com/sofis-aqq" target="_blank"><img src="img/git.png" alt="github"></A>	
-				 						<p>sofis_aqq</p>
+				 						<img src="img/git.png" alt="github">	
+				 						<A href="https://github.com/sofis-aqq" target="_blank"><p>sofis_aqq</p></A>
 											 
 				 					</section>
 
